--- a/BioA/homepage.html
+++ b/BioA/homepage.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head> 
     <title>Biografi Guru Kelompok 6</title>
+    <link rel="icon" type="image/x-icon" href="Temp.jpg">
     <link rel="stylesheet" href="topbar.css">
 </head>
 
 <body>
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">About Us</a>
-        <a href="">Documentary</a>
-      </div> 
-</body>
 
+    <div class="topnav">
+        <a class="active" href="#home">Biografi</a>
+        <a href="#news">About Us</a>
+    </div> 
+
+<img src="Temp.jpg" class="TempImg">
+
+    <h3  style="font-size: 30px;">Kadek Arie Wira Kusuma, S.Kom</h3>
+
+    <p style="font-size: 20px; text-align: justify;"> Pak Kadek Arie Wira Kusuma, S.Kom atau Pak Arie adalah seorang guru yang mengajar 
+        di SMK TI Bali Global Denpasar pada tahun 2025 ini. Pak Arie lahir pada 31 Maret 1999, di kota Denpasar, Bali. 
+        Sebagai guru, Pak Arie mengajar pelajaran DPPLG (Dasar-dasar Pengembangan Perangkat Lunak & Gim) di kelas X RPL 3, 
+        dan PWPB (Pemrograman Web & Perangkat Bergerak) di kelas XII RPL 1, XII RPL 2, dan XII RPL 3.
+    </p>
+
+    <p style="font-size: 20px; text-align: justify;">
+        Halaman web ini akan menjelaskan lebih lanjut tentang beberapa aspek tentang Pak Arie. Selamat membaca!
+    </p>
+
+</body>
 </html>
